Fix Safari Sub-pixel margin gap

--- a/modules/curve.scss
+++ b/modules/curve.scss
@@ -10,4 +10,8 @@
 	.w-embed::after {
 		display: none !important;
 	}
+
+	& + section {
+		margin-top: -1px;
+	}
 }
